<resources>
    <!-- GENERAL -->
    <string name="app_name">Acodemy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_author_email">rafaellguimas@gmail.com</string>
    <string name="title_author_name">Rafael Guimarães de Sousa</string>
    <string name="title_version">v. 1.0</string>
    <string name="title_shared_preferences">userPreferences</string>

    <!-- SHARED PREFERENCES -->
    <string name="pref_sync">sync</string>
    <string name="pref_evaluate">evaluate</string>
    <string name="pref_stars">stars</string>
    <string name="pref_obs">obs</string>
    <string name="pref_firebase_key">firebaseKey</string>

    <!-- FIREBASE -->
    <string name="fire_evaluate">classification</string>
    <string name="fire_obs">obs</string>
    <string name="fire_stars">stars</string>

    <!-- OTHERS -->
    <string name="text_yes">Sim</string>
    <string name="text_no">Não</string>
    <string name="text_press">Pressione</string>
    <string name="text_pressed">Botão pressionado!</string>
    <string name="text_option_1">Opção 1</string>
    <string name="text_option_2">Opção 2</string>
    <string name="text_on">LIGADO</string>
    <string name="text_off">DESLIGADO</string>
    <string name="text_hellow_world">Hello World!</string>
    <string name="text_goodbye_world">Goodbye World!</string>
    <string name="text_full_name">Nome Completo</string>
    <string name="text_email">E-mail</string>
    <string name="text_show">Exibir</string>
    <string name="text_enter">Entrar</string>
    <string name="text_empty">Vazio</string>
    <string name="text_thanks">Muito obrigado pela contribuição!</string>

    <!-- PROPERTIES -->
    <string name="prop_color">Cor</string>
    <string name="prop_size">Tamanho</string>
    <string name="prop_icon">Ícone</string>

    <!-- START -->
    <string name="text_welcome">Bem vindo ao Acodemy!</string>
    <string name="text_select_category">Selecione uma categoria no menu lateral \npara ver os componentes disponíveis</string>

    <!-- INTRO -->
    <string name="text_paragraph_1">
        \t\tO Acodemy possui demonstrações dos componentes básicos presentes no Android Studio para a criação de um aplicativo.
        Para isso, é necessário entender um pouco sobre o ciclo de vida de uma aplicação Android. </string>
    <string name="text_paragraph_2">
        \t\t* Todos os demos funcionam corretamente desde que sejam reproduzidos no método onCreate() da activity desejada.</string>

    <!-- ABOUT -->
    <string name="title_activity_about">Sobre o Acodemy</string>

    <!-- BOTTOM BAR -->
    <string name="tab_component">ANDROID</string>
    <string name="tab_java">JAVA</string>
    <string name="tab_xml">XML</string>

    <!-- DIALOGS -->
    <string name="title_dialog_edit">Editar</string>
    <string name="title_dialog_color">Selecione a cor</string>
    <string name="text_apply">Aplicar</string>
    <string name="text_width">Largura:</string>
    <string name="text_height">Altura:</string>
    <string name="text_confirm">Confirmar</string>
    <string name="text_send">Enviar</string>
    <string name="text_got_it">Entendi</string>
    <string name="text_suggestion">Observações e Sugestões</string>
    <string name="text_about">O Acodemy foi desenvolvido como um projeto de conclusão do curso de
        Ciência da Computação na PUC-MG pelo aluno Rafael Guimarães.
        \n\nO app está em fase de desenvolvimento, portanto esta não é a versão final do mesmo.
        \n\nPor favor, avalie a sua experiência para ajudar no desenvolvimento do app.
        Avalie agora ou a qualquer momento através do menu lateral.</string>
    <string name="title_atention">Atenção</string>
    <string name="text_class_please">Por favor, avalie a sua experiência no Acodemy para ajudar no desenvolvimento do app.
                                    \n\nAvalie agora ou a qualquer momento através do menu lateral.</string>
    <string name="text_now">Avaliar agora</string>
    <string name="text_after">Depois</string>
    <string name="text_cancel">Cancelar</string>
    <string name="text_open_developers">Você será redirecionada para o Android Developers, site oficial da Google.
                                        Tem certeza que deseja sair?</string>

    <!-- DRAWER -->
    <string name="title_home">Início</string>
    <string name="title_intro">Introdução</string>
    <string name="title_about">Sobre o app</string>
    <string name="title_evaluate">Avaliar</string>
    <string name="title_cat">Categorias</string>
    <string name="title_cat_widgets">Widgets</string>
    <string name="title_cat_text_fields">Text Fields</string>
    <string name="title_cat_layouts">Layouts</string>
    <string name="title_cat_containers">Containers</string>
    <string name="title_cat_image_media">Image &amp; Media</string>
    <string name="title_cat_date_time">Date &amp; Time</string>

    <!-- WIDGET CATEGORY -->
    <string name="item_text_view">Text View</string>
    <string name="item_simple_btn">Simple Button</string>
    <string name="item_floating_btn">Floating Action Button</string>
    <string name="item_radio_btn">Radio Button</string>
    <string name="item_toggle_btn">Toggle Button</string>
    <string name="item_spinner">Spinner</string>
    <string name="item_progress_bar">ProgressBar</string>
    <string name="item_seek_bar">SeekBar</string>

    <!-- TEXT FIELDS CATEGORY -->
    <string name="item_edit_text">Edit Text</string>

    <!-- LAYOUTS CATEGORY -->
    <string name="item_grid_layout">Grid Layout</string>
    <string name="item_linear_layout_vertical">Linear Layout (Vertical)</string>
    <string name="item_linear_layout_horizontal">Linear Layout (Horizontal)</string>
    <string name="item_relative_layout">Relative Layout</string>

    <!-- CONTAINERS CATEGORY -->
    <string name="item_list_view">List View</string>
    <string name="item_web_view">Web View</string>

    <!-- IMAGES & MEDIA CATEGORY -->
    <string name="item_image_btn">Image Button</string>
    <string name="item_image_view">Image View</string>
    <string name="item_video_view">Video View</string>

    <!-- DATE & TIME CATEGORY -->
    <string name="item_time_picker">Time Picker</string>
    <string name="item_date_picker">Date Picker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
