<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.DemoFragment"
    android:orientation="vertical"
    android:padding="@dimen/padding_normal">

    <Button
        android:text="@string/item_simple_btn"
        android:id="@+id/btnSimpleButton"
        style="@style/AppTheme.Button" />

    <Button
        android:text="@string/item_floating_btn"
        android:id="@+id/btnFloatActionButton"
        style="@style/AppTheme.Button" />

    <Button
        android:text="@string/item_radio_btn"
        android:id="@+id/btnRadioButton"
        style="@style/AppTheme.Button" />

    <Button
        android:text="@string/item_toggle_btn"
        android:id="@+id/btnToggleButton"
        style="@style/AppTheme.Button" />

    <Button
        android:text="@string/item_image_btn"
        android:id="@+id/btnImageButton"
        style="@style/AppTheme.Button" />
</LinearLayout>
